--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+*{font-family: Impact, fantasy;}
 html {
     overflow: hidden;
     height: 100%;
@@ -28,24 +29,28 @@ body {
 
 #showcase-pokemon {
     border-style: solid;
-    background-color: rgb(127,144,194);
+    background-color: rgb(255, 47, 0);
     flex: 1.5;
-    height: 350px;
-    text-align: center;
+    height: 300px;
+    text-align: center;   
 }
 
 #pokemon-obtained-list {
     border-style: solid;
-    background-color: blue;
+    background-color: rgb(67, 67, 244);
     flex: 1;
     text-align: center;
+    overflow-y: auto;
+    height: 300px;
 }
 
 .pokemon-team-list-div{
     border-style: solid;
-    background-color: purple;
+    background-color: rgb(210, 46, 210);
     flex: 1;
     text-align: center;
+    overflow-y: auto;
+    height: 300px;
 }
 
 .pokemon-team-container-and-form {
@@ -57,24 +62,72 @@ body {
 }
 
 .pokemon-list-background {
-    background-color: orangered;
-}
-
-.pokemon-caught {
-    color: green;
+    background-color: rgb(255, 47, 0);
 }
 
 li{
     display: inline-block;
     margin: 10px;
     padding: 20px;
-    width: 200px;
-    background-color: #F8F8F8;
+    width: 190px;
+    height: 150px;
+    background-color: #E0E0E0;
     text-align: center;
+    border-radius: 30px;
 }
 
+li img:hover{
+    animation: shake .5s;
+    animation-iteration-count: infinite;
+}
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+li h2, li p {
+    margin: 0;
+    text-transform: capitalize;
+}
+
+.front-back-button{
+    text-align: center;
+    
+}
+
+#back{
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 40px;
+}
+
+#forward{
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 40px;
+}
 .footer-div{
     text-align: center;
     font-size: 20px;
     font-family: Chalkduster, fantasy;
 }
+
+.pokemon-caught {
+    color: green;
+}
+
+.add-to-list-button{
+
+}
+
