--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
 
 .pokemon-team-container-and-form {
     border-style: solid;
-    background-image: url("/images/pikachu\ team\ container.jpeg");
+    background-image: url("images/pikachu\ team\ container.jpeg");
     opacity: .8;
     background-size:cover;
     border-style: solid;
@@ -230,7 +230,6 @@ li h2, li p {
     font-family: Gill Sans, sans-serif;
     font-size: 25px;
     font-weight: bold;
-    list-style:
 }
 
 .add-to-list-button{
@@ -298,7 +297,7 @@ img {
 
 
 .save-team-button {
-    margin-top: 30px;
+    margin-top: 15px;
     font-size: 130%;
     transition-duration: 0.4s;
 }
@@ -316,19 +315,28 @@ img {
 }
 
 .show-pokemon-team-image {
-    margin-top: 3%;
     margin-left: 1%;
     margin-right: 1%;
-    height: 10%;
-    width: 10%;
+    height: 9%;
+    width: 9%;
 }
 
 #clear-team {
-    font-size: 23px;
+    font-size: 20px;
     transition-duration: 0.4s;
 }
 
 #clear-team:hover {
+    background-color: #008CBA;
+    color:#E0E0E0;
+}
+
+.delete-json-button {
+    font-size: 15px;
+    transition-duration: 0.4s;
+}
+
+.delete-json-button:hover {
     background-color: #008CBA;
     color:#E0E0E0;
 }
